website/versioned_docs/version-0.16.x/api/graphback-core/modules/_index_.md
---
id: "_index_"
title: "index"
sidebar_label: "index"
---

## Index

### References

* [BooleanInput](_index_.md#booleaninput)
* [CRUDService](_index_.md#crudservice)
* [CRUDServiceConfig](_index_.md#crudserviceconfig)
* [CreateCRUDServiceOptions](_index_.md#createcrudserviceoptions)
* [DataProviderCreator](_index_.md#dataprovidercreator)
* [DatabaseNameTransform](_index_.md#databasenametransform)
* [DatabaseNameTransformDirection](_index_.md#databasenametransformdirection)
* [DefaultValueAnnotation](_index_.md#defaultvalueannotation)
* [FILTER_SUPPORTED_SCALARS](_index_.md#filter_supported_scalars)
* [FieldDescriptor](_index_.md#fielddescriptor)
* [FieldRelationshipMetadata](_index_.md#fieldrelationshipmetadata)
* [FieldTransform](_index_.md#fieldtransform)
* [FieldTransformMap](_index_.md#fieldtransformmap)
* [FieldTransformer](_index_.md#fieldtransformer)
* [FindByArgs](_index_.md#findbyargs)
* [FloatInput](_index_.md#floatinput)
* [GraphBackPluginEngineOptions](_index_.md#graphbackpluginengineoptions)
* [GraphbackCRUDGeneratorConfig](_index_.md#graphbackcrudgeneratorconfig)
* [GraphbackCRUDService](_index_.md#graphbackcrudservice)
* [GraphbackContext](_index_.md#graphbackcontext)
* [GraphbackCoreMetadata](_index_.md#graphbackcoremetadata)
* [GraphbackDataProvider](_index_.md#graphbackdataprovider)
* [GraphbackDate](_index_.md#graphbackdate)
* [GraphbackDateInput](_index_.md#graphbackdateinput)
* [GraphbackDateTime](_index_.md#graphbackdatetime)
* [GraphbackDateTimeInput](_index_.md#graphbackdatetimeinput)
* [GraphbackGlobalConfig](_index_.md#graphbackglobalconfig)
* [GraphbackJSON](_index_.md#graphbackjson)
* [GraphbackJSONObject](_index_.md#graphbackjsonobject)
* [GraphbackObjectID](_index_.md#graphbackobjectid)
* [GraphbackObjectIdInput](_index_.md#graphbackobjectidinput)
* [GraphbackOperationType](_index_.md#graphbackoperationtype)
* [GraphbackOrderBy](_index_.md#graphbackorderby)
* [GraphbackPage](_index_.md#graphbackpage)
* [GraphbackPlugin](_index_.md#graphbackplugin)
* [GraphbackPluginEngine](_index_.md#graphbackpluginengine)
* [GraphbackProxyService](_index_.md#graphbackproxyservice)
* [GraphbackServiceConfigMap](_index_.md#graphbackserviceconfigmap)
* [GraphbackTime](_index_.md#graphbacktime)
* [GraphbackTimeInput](_index_.md#graphbacktimeinput)
* [GraphbackTimestamp](_index_.md#graphbacktimestamp)
* [GraphbackTimestampInput](_index_.md#graphbacktimestampinput)
* [IdInput](_index_.md#idinput)
* [IntInput](_index_.md#intinput)
* [Maybe](_index_.md#maybe)
* [ModelDefinition](_index_.md#modeldefinition)
* [ModelFieldMap](_index_.md#modelfieldmap)
* [ModelTableMap](_index_.md#modeltablemap)
* [NoDataError](_index_.md#nodataerror)
* [QueryFilter](_index_.md#queryfilter)
* [RelationshipAnnotation](_index_.md#relationshipannotation)
* [RelationshipMetadataBuilder](_index_.md#relationshipmetadatabuilder)
* [ResultList](_index_.md#resultlist)
* [Scalars](_index_.md#scalars)
* [ServiceCreator](_index_.md#servicecreator)
* [SortDirection](_index_.md#sortdirection)
* [StringInput](_index_.md#stringinput)
* [TableDataMap](_index_.md#tabledatamap)
* [TableID](_index_.md#tableid)
* [TransformType](_index_.md#transformtype)
* [addRelationshipFields](_index_.md#addrelationshipfields)
* [buildModelTableMap](_index_.md#buildmodeltablemap)
* [createCRUDService](_index_.md#createcrudservice)
* [createInMemoryFilterPredicate](_index_.md#createinmemoryfilterpredicate)
* [defaultTableNameTransform](_index_.md#defaulttablenametransform)
* [extendOneToManyFieldArguments](_index_.md#extendonetomanyfieldarguments)
* [extendRelationshipFields](_index_.md#extendrelationshipfields)
* [filterModelTypes](_index_.md#filtermodeltypes)
* [filterNonModelTypes](_index_.md#filternonmodeltypes)
* [getColumnName](_index_.md#getcolumnname)
* [getDatabaseArguments](_index_.md#getdatabasearguments)
* [getFieldName](_index_.md#getfieldname)
* [getFieldTransformations](_index_.md#getfieldtransformations)
* [getInputFieldName](_index_.md#getinputfieldname)
* [getInputFieldTypeName](_index_.md#getinputfieldtypename)
* [getInputTypeName](_index_.md#getinputtypename)
* [getModelByName](_index_.md#getmodelbyname)
* [getModelFieldsFromResolverFields](_index_.md#getmodelfieldsfromresolverfields)
* [getPrimaryKey](_index_.md#getprimarykey)
* [getRelationFieldName](_index_.md#getrelationfieldname)
* [getResolverInfoFieldsList](_index_.md#getresolverinfofieldslist)
* [getSelectedFieldsFromResolverInfo](_index_.md#getselectedfieldsfromresolverinfo)
* [getSubscriptionName](_index_.md#getsubscriptionname)
* [getTableName](_index_.md#gettablename)
* [getUserModels](_index_.md#getusermodels)
* [graphbackScalarsTypes](_index_.md#graphbackscalarstypes)
* [isInputField](_index_.md#isinputfield)
* [isModelType](_index_.md#ismodeltype)
* [isOneToManyField](_index_.md#isonetomanyfield)
* [isSpecifiedGraphbackJSONScalarType](_index_.md#isspecifiedgraphbackjsonscalartype)
* [isSpecifiedGraphbackScalarType](_index_.md#isspecifiedgraphbackscalartype)
* [isTransientField](_index_.md#istransientfield)
* [lowerCaseFirstChar](_index_.md#lowercasefirstchar)
* [metadataMap](_index_.md#metadatamap)
* [parseRelationshipAnnotation](_index_.md#parserelationshipannotation)
* [printSchemaWithDirectives](_index_.md#printschemawithdirectives)
* [relationshipFieldDescriptionTemplate](_index_.md#relationshipfielddescriptiontemplate)
* [relationshipOneToOneFieldDescriptionTemplate](_index_.md#relationshiponetoonefielddescriptiontemplate)
* [transformForeignKeyName](_index_.md#transformforeignkeyname)
* [upperCaseFirstChar](_index_.md#uppercasefirstchar)

## References

###  BooleanInput

• **BooleanInput**:

___

###  CRUDService

• **CRUDService**:

___

###  CRUDServiceConfig

• **CRUDServiceConfig**:

___

###  CreateCRUDServiceOptions

• **CreateCRUDServiceOptions**:

___

###  DataProviderCreator

• **DataProviderCreator**:

___

###  DatabaseNameTransform

• **DatabaseNameTransform**:

___

###  DatabaseNameTransformDirection

• **DatabaseNameTransformDirection**:

___

###  DefaultValueAnnotation

• **DefaultValueAnnotation**:

___

###  FILTER_SUPPORTED_SCALARS

• **FILTER_SUPPORTED_SCALARS**:

___

###  FieldDescriptor

• **FieldDescriptor**:

___

###  FieldRelationshipMetadata

• **FieldRelationshipMetadata**:

___

###  FieldTransform

• **FieldTransform**:

___

###  FieldTransformMap

• **FieldTransformMap**:

___

###  FieldTransformer

• **FieldTransformer**:

___

###  FindByArgs

• **FindByArgs**:

___

###  FloatInput

• **FloatInput**:

___

###  GraphBackPluginEngineOptions

• **GraphBackPluginEngineOptions**:

___

###  GraphbackCRUDGeneratorConfig

• **GraphbackCRUDGeneratorConfig**:

___

###  GraphbackCRUDService

• **GraphbackCRUDService**:

___

###  GraphbackContext

• **GraphbackContext**:

___

###  GraphbackCoreMetadata

• **GraphbackCoreMetadata**:

___

###  GraphbackDataProvider

• **GraphbackDataProvider**:

___

###  GraphbackDate

• **GraphbackDate**:

___

###  GraphbackDateInput

• **GraphbackDateInput**:

___

###  GraphbackDateTime

• **GraphbackDateTime**:

___

###  GraphbackDateTimeInput

• **GraphbackDateTimeInput**:

___

###  GraphbackGlobalConfig

• **GraphbackGlobalConfig**:

___

###  GraphbackJSON

• **GraphbackJSON**:

___

###  GraphbackJSONObject

• **GraphbackJSONObject**:

___

###  GraphbackObjectID

• **GraphbackObjectID**:

___

###  GraphbackObjectIdInput

• **GraphbackObjectIdInput**:

___

###  GraphbackOperationType

• **GraphbackOperationType**:

___

###  GraphbackOrderBy

• **GraphbackOrderBy**:

___

###  GraphbackPage

• **GraphbackPage**:

___

###  GraphbackPlugin

• **GraphbackPlugin**:

___

###  GraphbackPluginEngine

• **GraphbackPluginEngine**:

___

###  GraphbackProxyService

• **GraphbackProxyService**:

___

###  GraphbackServiceConfigMap

• **GraphbackServiceConfigMap**:

___

###  GraphbackTime

• **GraphbackTime**:

___

###  GraphbackTimeInput

• **GraphbackTimeInput**:

___

###  GraphbackTimestamp

• **GraphbackTimestamp**:

___

###  GraphbackTimestampInput

• **GraphbackTimestampInput**:

___

###  IdInput

• **IdInput**:

___

###  IntInput

• **IntInput**:

___

###  Maybe

• **Maybe**:

___

###  ModelDefinition

• **ModelDefinition**:

___

###  ModelFieldMap

• **ModelFieldMap**:

___

###  ModelTableMap

• **ModelTableMap**:

___

###  NoDataError

• **NoDataError**:

___

###  QueryFilter

• **QueryFilter**:

___

###  RelationshipAnnotation

• **RelationshipAnnotation**:

___

###  RelationshipMetadataBuilder

• **RelationshipMetadataBuilder**:

___

###  ResultList

• **ResultList**:

___

###  Scalars

• **Scalars**:

___

###  ServiceCreator

• **ServiceCreator**:

___

###  SortDirection

• **SortDirection**:

___

###  StringInput

• **StringInput**:

___

###  TableDataMap

• **TableDataMap**:

___

###  TableID

• **TableID**:

___

###  TransformType

• **TransformType**:

___

###  addRelationshipFields

• **addRelationshipFields**:

___

###  buildModelTableMap

• **buildModelTableMap**:

___

###  createCRUDService

• **createCRUDService**:

___

###  createInMemoryFilterPredicate

• **createInMemoryFilterPredicate**:

___

###  defaultTableNameTransform

• **defaultTableNameTransform**:

___

###  extendOneToManyFieldArguments

• **extendOneToManyFieldArguments**:

___

###  extendRelationshipFields

• **extendRelationshipFields**:

___

###  filterModelTypes

• **filterModelTypes**:

___

###  filterNonModelTypes

• **filterNonModelTypes**:

___

###  getColumnName

• **getColumnName**:

___

###  getDatabaseArguments

• **getDatabaseArguments**:

___

###  getFieldName

• **getFieldName**:

___

###  getFieldTransformations

• **getFieldTransformations**:

___

###  getInputFieldName

• **getInputFieldName**:

___

###  getInputFieldTypeName

• **getInputFieldTypeName**:

___

###  getInputTypeName

• **getInputTypeName**:

___

###  getModelByName

• **getModelByName**:

___

###  getModelFieldsFromResolverFields

• **getModelFieldsFromResolverFields**:

___

###  getPrimaryKey

• **getPrimaryKey**:

___

###  getRelationFieldName

• **getRelationFieldName**:

___

###  getResolverInfoFieldsList

• **getResolverInfoFieldsList**:

___

###  getSelectedFieldsFromResolverInfo

• **getSelectedFieldsFromResolverInfo**:

___

###  getSubscriptionName

• **getSubscriptionName**:

___

###  getTableName

• **getTableName**:

___

###  getUserModels

• **getUserModels**:

___

###  graphbackScalarsTypes

• **graphbackScalarsTypes**:

___

###  isInputField

• **isInputField**:

___

###  isModelType

• **isModelType**:

___

###  isOneToManyField

• **isOneToManyField**:

___

###  isSpecifiedGraphbackJSONScalarType

• **isSpecifiedGraphbackJSONScalarType**:

___

###  isSpecifiedGraphbackScalarType

• **isSpecifiedGraphbackScalarType**:

___

###  isTransientField

• **isTransientField**:

___

###  lowerCaseFirstChar

• **lowerCaseFirstChar**:

___

###  metadataMap

• **metadataMap**:

___

###  parseRelationshipAnnotation

• **parseRelationshipAnnotation**:

___

###  printSchemaWithDirectives

• **printSchemaWithDirectives**:

___

###  relationshipFieldDescriptionTemplate

• **relationshipFieldDescriptionTemplate**:

___

###  relationshipOneToOneFieldDescriptionTemplate

• **relationshipOneToOneFieldDescriptionTemplate**:

___

###  transformForeignKeyName

• **transformForeignKeyName**:

___

###  upperCaseFirstChar

• **upperCaseFirstChar**:
